# pyparserai

./: README.md  requariaments.txt  setup.cfg  setup.py
pyparserai/: prai.py
