[metadata]
name = pyparserai
version = 0.0.1
author = Aisha
author_email = abazylzanova@gmail.com
description = A parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aishabazylzhanova/pyparserai

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pyparserai
packages = find:
python_requires = >=3.6
install_requires =
    numpy
